k8s/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: <APP_NAME>
  namespace: <NAMESPACE>
spec:
  replicas: <REPLICAS>
  selector:
    matchLabels:
      app: <APP_NAME>
  template:
    metadata:
      labels:
        app: <APP_NAME>
    spec:
      containers:
        - name: <APP_NAME>
          ports:
            - containerPort: 80
          image: <IMAGE>:<IMAGE_TAG>
          imagePullPolicy: Always
          resources:
            limits:
              cpu: <CPU_LIMIT>
              memory: <MEMORY_LIMIT>
            requests:
              cpu: <CPU_REQUEST>
              memory: <MEMORY_REQUEST>
      imagePullSecrets:
        - name: image-pull-secret-git

---

apiVersion: v1
kind: Service
metadata:
  name: <APP_NAME>-network
  namespace: <NAMESPACE>
spec:
  type: ClusterIP
  ports:
    - name: tcp
      port: 80
  selector:
    app: <APP_NAME>

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <APP_NAME>-ingress
  namespace: <NAMESPACE>
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: <DOMAIN_NAME>
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: <APP_NAME>-network
                port:
                  number: 80
